--- a/compiler/Cargo.toml
+++ b/compiler/Cargo.toml
@@ -10,3 +10,5 @@ combine = { version = "4.6", features = ["regex"] }
 once_cell = "1.10"
 regex = "1"
 either = "1"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
