--- a/tm-viewer/src-tauri/Cargo.toml
+++ b/tm-viewer/src-tauri/Cargo.toml
@@ -18,6 +18,7 @@ tauri-build = { version = "1.0.0-rc.5", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0.136", features = ["derive"] }
 tauri = { version = "1.0.0-rc.5", features = ["api-all"] }
+compiler = { path = "../../compiler" }
 
 [features]
 # by default Tauri runs in production mode
