--- a/compiler/Cargo.toml
+++ b/compiler/Cargo.toml
@@ -12,3 +12,7 @@ regex = "1"
 either = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+
+[lib]
+name = "compiler"
+path = "src/lib.rs"
