--- a/tm-viewer/package.json
+++ b/tm-viewer/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1.0.0-rc.3",
+    "v-network-graph": "^0.5.13",
     "vue": "^3.2.25"
   },
   "devDependencies": {
