--- a/compiler/Cargo.toml
+++ b/compiler/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-combine = { version = "4.6", features = ["regex"] }
+nom = "7.1"
+nom-regex = "0.2"
 once_cell = "1.10"
 regex = "1"
 either = "1"
